--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 anyio==4.8.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -17,6 +18,7 @@ click==8.1.8
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
+dacite==1.9.2
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
@@ -27,11 +29,16 @@ fonttools==4.55.8
 fqdn==1.5.1
 ghp-import==2.1.0
 h11==0.14.0
+htmlmin==0.1.12
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+ImageHash==4.3.1
+incremental==24.7.2
 ipykernel==6.29.5
 ipython==8.32.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.6
 isoduration==20.11.0
 isort==6.0.0
 jedi==0.19.2
@@ -50,7 +57,9 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.3.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.14
 kiwisolver==1.4.8
+llvmlite==0.44.0
 loguru==0.7.3
 Markdown==3.7
 markdown-it-py==3.0.0
@@ -63,14 +72,19 @@ mergedeep==1.3.4
 mistune==3.1.1
 mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
+multimethod==1.12
+mypy==1.15.0
 mypy-extensions==1.0.0
+mypy_ipython==20.8.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.4.2
 notebook==7.3.2
 notebook_shim==0.2.4
-numpy==2.2.2
+numba==0.61.2
+numpy==2.1.0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -79,6 +93,7 @@ parso==0.8.4
 pathspec==0.12.1
 patsy==1.0.1
 pexpect==4.9.0
+phik==0.12.4
 pillow==11.1.0
 platformdirs==4.3.6
 prometheus_client==0.21.1
@@ -86,8 +101,11 @@ prompt_toolkit==3.0.50
 psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
+puremagic==1.28
 pycodestyle==2.12.1
 pycparser==2.22
+pydantic==2.11.3
+pydantic_core==2.33.1
 pyflakes==3.2.0
 Pygments==2.19.1
 pyparsing==3.2.1
@@ -95,6 +113,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==3.2.1
 pytz==2025.1
+PyWavelets==1.8.0
 PyYAML==6.0.2
 pyyaml_env_tag==0.1
 pyzmq==26.2.1
@@ -115,21 +134,26 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
--e git+https://github.com/TommMakk/store_sales.git@39c4eacae54a207bac7d9a3747bcf4dadb64f663#egg=store_sales
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+typeguard==4.4.2
 typer==0.15.1
 types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.0
 typing_extensions==4.12.2
 tzdata==2025.1
 uri-template==1.3.0
 urllib3==2.3.0
+visions==0.8.1
 watchdog==6.0.0
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+widgetsnbextension==4.0.14
+wordcloud==1.9.4
+ydata-profiling==4.16.1
