--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.2.2
 annotated-types==0.7.0
 anyio==4.8.0
 argon2-cffi==23.1.0
@@ -5,6 +6,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asarPy==1.0.1
 asttokens==3.0.0
+astunparse==1.6.3
 async-lru==2.0.4
 attrs==25.1.0
 babel==2.17.0
@@ -25,10 +27,15 @@ defusedxml==0.7.1
 executing==2.2.0
 fastjsonschema==2.21.1
 flake8==7.1.1
+flatbuffers==25.2.10
 fonttools==4.55.8
 fqdn==1.5.1
+gast==0.6.0
 ghp-import==2.1.0
+google-pasta==0.2.0
+grpcio==1.71.0
 h11==0.14.0
+h5py==3.13.0
 htmlmin==0.1.12
 httpcore==1.0.7
 httpx==0.28.1
@@ -58,7 +65,12 @@ jupyterlab==4.3.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.14
+keras==3.9.2
+keras-nightly==3.9.0.dev2025032003
+keras-tuner==1.4.7
 kiwisolver==1.4.8
+kt-legacy==1.0.5
+libclang==18.1.1
 llvmlite==0.44.0
 loguru==0.7.3
 Markdown==3.7
@@ -72,10 +84,12 @@ mergedeep==1.3.4
 mistune==3.1.1
 mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
+ml_dtypes==0.5.1
 multimethod==1.12
 mypy==1.15.0
 mypy-extensions==1.0.0
 mypy_ipython==20.8.0
+namex==0.0.8
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -85,6 +99,8 @@ notebook==7.3.2
 notebook_shim==0.2.4
 numba==0.61.2
 numpy==2.1.0
+opt_einsum==3.4.0
+optree==0.15.0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -98,6 +114,7 @@ pillow==11.1.0
 platformdirs==4.3.6
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
+protobuf==5.29.4
 psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -134,7 +151,13 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
+tb-nightly==2.19.0a20250218
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+termcolor==3.0.1
 terminado==0.18.1
+tf_keras==2.19.0
+tf_nightly==2.20.0.dev20250418
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tornado==6.4.2
@@ -154,6 +177,9 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
+wheel==0.45.1
 widgetsnbextension==4.0.14
 wordcloud==1.9.4
+wrapt==1.17.2
 ydata-profiling==4.16.1
