mkdocs added + documentation improvements

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: Store Sales - Deep Learning Solution
 site_author: Tommi Makela
-site_description: "Documentation for a deep learning approach to the Kaggle Store Sales - Time Series Forecasting competition."
+site_description: "Documentation for a deep learning  to the Kaggle Store Sales - Time Series Forecasting competition."
 site_url: https://github.com/TommMakk/store-sales-deep-learning
 
 repo_url: https://github.com/TommMakk/store-sales-deep-learning
