--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.2.2
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
 argon2-cffi==23.1.0
@@ -10,13 +11,17 @@ astunparse==1.6.3
 async-lru==2.0.4
 attrs==25.1.0
 babel==2.17.0
+backrefs==5.8
 beautifulsoup4==4.12.3
 black==25.1.0
 bleach==6.2.0
+blinker==1.9.0
+cachetools==6.1.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
@@ -32,6 +37,8 @@ fonttools==4.55.8
 fqdn==1.5.1
 gast==0.6.0
 ghp-import==2.1.0
+gitdb==4.0.12
+GitPython==3.1.44
 google-pasta==0.2.0
 grpcio==1.71.0
 h11==0.14.0
@@ -84,12 +91,15 @@ mergedeep==1.3.4
 mistune==3.1.1
 mkdocs==1.6.1
 mkdocs-get-deps==0.2.0
+mkdocs-material==9.6.14
+mkdocs-material-extensions==1.3.1
 ml_dtypes==0.5.1
 multimethod==1.12
 mypy==1.15.0
 mypy-extensions==1.0.0
 mypy_ipython==20.8.0
 namex==0.0.8
+narwhals==1.44.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -103,6 +113,7 @@ opt_einsum==3.4.0
 optree==0.15.0
 overrides==7.7.0
 packaging==24.2
+paginate==0.5.7
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
@@ -112,6 +123,7 @@ pexpect==4.9.0
 phik==0.12.4
 pillow==11.1.0
 platformdirs==4.3.6
+plotly==6.2.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 protobuf==5.29.4
@@ -119,12 +131,15 @@ psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
 puremagic==1.28
+pyarrow==20.0.0
 pycodestyle==2.12.1
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+pydeck==0.9.1
 pyflakes==3.2.0
 Pygments==2.19.1
+pymdown-extensions==10.15
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -147,11 +162,15 @@ Send2Trash==1.8.3
 setuptools==75.8.0
 shellingham==1.5.4
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
+streamlit==1.46.1
+streamlit-plotly-events==0.0.6
 tb-nightly==2.19.0a20250218
+tenacity==9.1.2
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 termcolor==3.0.1
@@ -160,6 +179,7 @@ tf_keras==2.19.0
 tf_nightly==2.20.0.dev20250418
 threadpoolctl==3.5.0
 tinycss2==1.4.0
+toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
